# async-winit

./: .build.yml  .drone.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-PATRON.md  LICENSE-PROSPERITY.md  MAINTAINERS.md  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
ci/: ci.sh
examples/: timer.rs  window.rs
smol_example/: Cargo.toml  urls.txt
smol_example/src/: main.rs
src/: event.rs  event_loop.rs  filter.rs  handler.rs  lib.rs  oneoff.rs  platform.rs  reactor.rs  sync.rs  timer.rs  window.rs
src/event_loop/: registration.rs
src/handler/: waiters.rs
src/platform/: android.rs  free_unix.rs  ios.rs  macos.rs  orbital.rs  run_return.rs  wayland.rs  windows.rs  x11.rs
src/window/: registration.rs
