[package]
name = "async-winit"
version = "0.1.1"
edition = "2021"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "Use winit like an async runtime"
repository = "https://github.com/notgull/async-winit"
license = "AGPL-3.0-or-later"

[dependencies]
async-broadcast = "0.5.1"
async-channel = "1.8.0"
async-lock = "2.7.0"
cfg-if = "1.0.0"
concurrent-queue = "2.2.0"
event-listener = "2.5.3"
futures-lite = { version = "1.13.0", default-features = false }
once_cell = "1.17.1"
parking = "2.1.0"
pin-project-lite = "0.2.9"
raw-window-handle = "0.5.2"
slab = "0.4.8"
winit = { version = "0.28.3", default-features = false }

[dev-dependencies]
futures-lite = { version = "1.13.0", features = ["std"], default-features = false }
softbuffer = { version = "0.2.0", default-features = false, features = ["x11"] }
winit = { version = "0.28.3", default-features = false, features = ["x11"] }

[features]
default = ["x11", "wayland", "wayland-dlopen"]
x11 = ["winit/x11"]
wayland = ["winit/wayland"]
wayland-dlopen = ["winit/wayland-dlopen"]
android-native-activity = ["winit/android-native-activity"]
android-game-activity = ["winit/android-game-activity"]

[workspace]
members = ["smol_example"]

[build-dependencies]
cfg_aliases = "0.1.1"
