[package]
name = "async-winit"
version = "0.2.1"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]
description = "Use winit like an async runtime"
repository = "https://src.notgull.net/notgull/async-winit"
homepage = "https://src.notgull.net/notgull/async-winit"
license = "LGPL-3.0-or-later OR MPL-2.0"
rust-version = "1.65.0"

[dependencies]
async-channel = { version = "1.8.0", optional = true }
cfg-if = "1.0.0"
concurrent-queue = { version = "2.2.0", optional = true }
futures-lite = { version = "1.13.0", default-features = false }
once_cell = "1.17.1"
parking = "2.1.0"
pin-project-lite = "0.2.9"
raw-window-handle = "0.5.2"
slab = "0.4.8"
unsend = { version = "0.2.1", default-features = false, features = ["alloc"] }
winit = { version = "0.28.3", default-features = false }

[build-dependencies]
cfg_aliases = "0.1.1"

[dev-dependencies]
async-channel = "1.8.0"
futures-lite = { version = "1.13.0", features = ["std"], default-features = false }
softbuffer = { version = "0.2.0", default-features = false, features = ["x11"] }
winit = { version = "0.28.3", default-features = false, features = ["x11"] }

[features]
default = ["wayland", "wayland-dlopen", "x11"]
thread_safe = ["async-channel", "concurrent-queue"]
x11 = ["winit/x11"]
wayland = ["winit/wayland"]
wayland-dlopen = ["winit/wayland-dlopen"]
android-native-activity = ["winit/android-native-activity"]
android-game-activity = ["winit/android-game-activity"]

[workspace]
members = ["smol_example"]
