[package]
name = "async_winit_smol_example"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "Example of async-winit using smol"
repository = "https://github.com/notgull/async-winit"

[dependencies]
async-rustls = "0.3.0"
async-winit = { version = "0.1.0", path = ".." }
bytemuck = "1.13.1"
color-eyre = "0.6.2"
cosmic-text = "0.8.0"
http = "0.2.9"
smol = "1.3.0"
softbuffer = "0.2.0"
tiny-skia = { version = "0.8.3", default-features = false, features = ["std"] }
webpki-roots = "0.23.0"
