[package]
name = "async_winit_smol_example"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]
description = "Example of async-winit using smol"
repository = "https://src.notgull.net/notgull/async-winit"
publish = false

[dependencies]
async-rustls = "0.3.0"
async-winit = { version = "0.2.0", path = ".." }
bytemuck = "1.13.1"
color-eyre = "0.6.2"
cosmic-text = "0.8.0"
http = "0.2.9"
piet = "0.6.2"
smol = "1.3.0"
softbuffer = "0.2.0"
theo = "0.1.0"
webpki-roots = "0.23.0"
